--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,12 +1,12 @@
 <h1 class = "text-center">Listing All Article</h1>
-
 <div class="container">
+<%= render 'message'%>
 <% @articles.each do |article| %>
     <div class = "row justify-content-md-center">
         <div class="col-8 mt-5">
             <div class="card text-center">
             <div class="card-header font-italic">
-                by Ahmed Ammar
+                by <%= article.user.username %>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><%= link_to article.title, article_path(article), class:"text-success"%></h5>
