--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
         <div class="col-8 mt-5">
             <div class="card text-center">
             <div class="card-header font-italic">
-                by Ahmed Ammar
+                by <%= @article.user.username %>
             </div>
             <div class="card-body">
                 <div class="card-text text-right"><%= simple_format(@article.description) %></div>
