--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,19 +1,25 @@
 <h1 class = "text-center">Listing All Article</h1>
 <div class="container">
+<div class="flickr_pagination">
+    <%= will_paginate @articles %>
+</div>
+
 <%= render 'message'%>
 <% @articles.each do |article| %>
     <div class = "row justify-content-md-center">
         <div class="col-8 mt-5">
             <div class="card text-center">
             <div class="card-header font-italic">
-                by <%= article.user.username %>
+                by <%= link_to article.user.username, user_path(article.user) %>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><%= link_to article.title, article_path(article), class:"text-success"%></h5>
                 <p class="card-text"><%= truncate(article.description, length: 100) %></p>
                 <%= link_to "View", article_path(article), class:"btn btn btn-outline-success"%>
+                <% if logged_in? && (article.user == current_user || current_user.admin?) %>
                 <%= link_to "Edit", edit_article_path(article), class:"btn btn btn-outline-info"%>
                 <%= link_to "Delete", article_path(article), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class:"btn btn btn-outline-danger"%>
+                <% end %>
             </div>
             <div class="card-footer text-muted">
                 <small>Created <%= time_ago_in_words(article.created_at) %> ago, edited <%= time_ago_in_words(article.updated_at) %> ago</small>
@@ -23,6 +29,10 @@
         </div>
     </div>
 <% end %>
+
+<div class="flickr_pagination">
+    <%= will_paginate @articles %>
+</div>
 </div>
 
 
