--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,15 +10,40 @@
                     <%= link_to "Bloggers", users_path, class: "nav-link"%>
                 </li>
                 <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Article
-                </a>
-                <ul class="dropdown-menu">
-                    <li><%= link_to "View Articles", articles_path, class:"dropdown-item"%></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><%= link_to "Create new Article", new_article_path, class:"dropdown-item"%></li>
-                </ul>
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Article
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><%= link_to "View Articles", articles_path, class:"dropdown-item"%></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <% if logged_in? %>
+                        <li><%= link_to "Create new Article", new_article_path, class:"dropdown-item"%></li>
+                        <% end %>
+                    </ul>
                 </li>
+                <% if logged_in? %>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <%= "(Admin)" if current_user.admin? %> Profile [<%= current_user.username%>]
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><%= link_to "View profile", user_path(current_user), class:"dropdown-item"%></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><%= link_to "Edit profile", edit_user_path(current_user), class:"dropdown-item"%></li>
+                        <li><%= link_to "Delete profile", user_path(current_user), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}, class:"dropdown-item text-danger"%></li>
+                    </ul>
+                </li>
+                <li class = "nav-item">
+                    <%= link_to 'Logout', logout_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "nav-link" %>
+                </li>
+                <% else %>
+                <li class = "nav-item">
+                    <%= link_to 'Login', login_path, class: "nav-link"%>
+                </li>
+                <li class = "nav-item">
+                    <%= link_to 'Sign Up', signup_path, class: "nav-link"%>
+                </li>
+                <% end %>
             </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
