--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,13 @@
         <div style="display: flex; justify-content: center; align-items: center; margin: 30px">
             <%= image_tag @user.avatar, style: "width: 200px; display: block;", class: "img-fluid img-thumbnail" %>
         </div>
-    <% end %> 
+    <% end %>
+    <div class="text-center mt-4">
+        <% if logged_in? && @user == current_user %>
+            <%= link_to "Edit profile", edit_user_path(@user), class: "btn btn-outline-success"%>
+        <% end %>
+
+    </div> 
 
 <h3 class="text-center mt-4">Articles</h1>
 
